--- a/index.html
+++ b/index.html
@@ -4,26 +4,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact Form</title>
-  <<link rel="stylesheet" href="styles.css">
- />
+
+  <!-- Link to your CSS file -->
+  <link rel="stylesheet" href="styles.css" />
+
+  <!-- Google Font: Inter -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet" />
 </head>
 <body>
+  <form>
+    <h1>Contact Us</h1>
 
-  <form id="contact-form" novalidate>
-    <label for="name">Name *</label>
-    <input type="text" id="name" name="name" required />
-
-    <label for="email">Email *</label>
-    <input type="email" id="email" name="email" required />
-
-    <label for="message">Message *</label>
-    <textarea id="message" name="message" required></textarea>
-
+    <input type="text" name="name" placeholder="Your Name" required />
+    <input type="email" name="email" placeholder="Your Email" required />
+    <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
     <button type="submit">Send Message</button>
   </form>
-
-  <div id="toast" role="alert" aria-live="polite">✅ Message Sent!</div>
-
-  <script src="script.js"></script>
 </body>
 </html>
